# aubebe

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: app_window.h
src/: CMakeLists.txt  Makefile  aubebe.cpp  aubebe.h  main.cpp
